--- a/bin/README
+++ b/bin/README
@@ -1,21 +1,35 @@
-backup-site.sh
+backup-site.sh [CONTENT DIR]
 
-  Shell script for backing up the database and content in Archie, requires some
-  modification of the script to correct for local path settings
+  Shell script for backing up the database and content in Archie, you must manually
+  pass the path to the root of your content directory as configured in the settings.php
+  for the backup script to work properly. The data will be backed up to ./bin/backup
 
-build-scatter-plots [--level=UID]
+  We also recommend using a service like DropBox https://www.dropbox.com/install?os=lnx
+  or Google Drive to backup the backed up data. Please see the respective services 
+  documentation for information on how to perform the backups
 
- PREREQ - python-matplotlib, python-mysqldb, imagemagick (convert)
+build-scatter-plots [LEVE UID]
+
+  PREREQ - python-matplotlib, python-mysqldb, imagemagick (convert)
 
   Using matplotlib this script takes the cords entered for the objects located in the level and
   creates 3 scatterplots of the data (X,Y) (X,Z) (Y,Z). These images are generated and saved
   in the content directory and then assoicated with the Level. This script can be scheduled
   to be run in the web interface or via cron. If it is run without arugments all level images
   are re-generated.
+
+  The pre-reqs for this script are checked in the web interface under Manage -> Status
  
 build-changelog.sh
 
-  Simple script to auto-generate a changelog
+  Simple script to auto-generate a changelog, used for development
+
+reset-password.php.inc [username] [password]
+
+  Resets the password for a web interface user, takes two arguments
+  first is username, second is password. Must be run as follows
+
+  php reset-password.php.inc USERNANE NEWPASSWORD
  
 [Scripts to be run from CRON]
 
@@ -30,16 +44,10 @@ task.cron.php.inc
   Regenerates QRcodes and other supplimentary data generation tasks, this 
   should be run from cron and is scheduled via the web interface
 
-reset-password.php.inc [username] [password]
-
-  Resets the password for a web interface user, takes two arguments
-  first is username, second is password. Must be run with php
-
-
 [Migration Scripts]
 
 import.records.php.inc / migrate.2013-2014.php.inc
 
   These are older scripts which were used to import or translate data beteween
   versions of ARCHIE they are not used, but are left for historical record
-  so that we can trace back what was done to the data
+  so that we can trace back what was done to the data.
