--- a/bin/README
+++ b/bin/README
@@ -2,7 +2,7 @@ install.sh
 
   Requires the database.auth file to exist, but will insert a blank Archie database
   and copy the settings.php in place. WARNING WARNING WARNING. This script will
-  overwrite existing data in your database, althought it does check for a settings.php
+  overwrite existing data in your database, although it does check for a settings.php
   it should _NEVER_ be run on an existing install as it will wipe out data. 
 
   It creates a default web interface user called admin with the password admin. Depending
