--- a/bin/install
+++ b/bin/install
@@ -17,8 +17,8 @@ then
 fi
 
 echo "Creating [archie] MySQL Database..."
-echo "create database archie;" | mysql --defaults-extra-file=${ABS_PATH}/database.auth
-echo "  echo \"create database archie;\" \| mysql --defaults-extra-file=${ABS_PATH}/database.auth"
+mysql --defaults-extra-file=${ABS_PATH}/database.auth -e "CREATE DATABASE archie;"
+echo "mysql --defaults-extra-file=${ABS_PATH}/database.auth -e \"CREATE DATABASE archie;\""
 echo "Inserting Base Database"
 mysql --defaults-extra-file=${ABS_PATH}/database.auth archie < ${ABS_PATH}/../config/database.sql
 echo "  mysql --defaults-extra-file=${ABS_PATH}/database.auth archie < ${ABS_PATH}/../config/database.sql"
